--- a/package.json
+++ b/package.json
@@ -116,12 +116,13 @@
     "react-toggle-button": "^2.1.0",
     "react-tooltip": "^3.1.1",
     "react-twitter-widgets": "^0.2.4",
-    "react-virtualized": "^7.22.1",
+    "react-virtualized": "8.11.4",
     "react-youtube": "^7.3.0",
     "redux": "3.6.0",
     "redux-actions": "2.0.1",
     "redux-logger": "3.0.0",
     "redux-thunk": "^2.1.0",
+    "seamless-immutable": "^7.1.2",
     "styled-components": "^1.1.1",
     "styled-jsx": "0.5.2",
     "styled-jsx-postcss": "git+https://github.com/timsuchanek/styled-jsx-postcss#build3",
