--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
     "graphcool-graphiql": "1.5.5",
     "graphcool-metrics": "0.2.3",
     "graphcool-styles": "0.1.6",
-    "graphiql": "0.10.1",
+    "graphiql": "^0.8.0",
     "graphql-voyager": "git+https://github.com/timsuchanek/graphql-voyager#build3",
     "immutable": "^3.8.1",
     "isomorphic-fetch": "^2.2.1",
