--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "calculate-size": "^0.2.0",
     "cheerio": "^0.22.0",
     "classnames": "^2.2.5",
-    "codemirror": "5.22.2",
+    "codemirror": "asdasda",
     "codemirror-graphql": "^0.6.3",
     "cookiestore": "^1.1.0",
     "cuid": "^1.3.8",
@@ -98,7 +98,7 @@
     "react-addons-shallow-compare": "^15.3.1",
     "react-autocomplete": "^1.0.1",
     "react-click-outside": "git+https://github.com/tj/react-click-outside#master",
-    "react-codemirror": "^0.2.6",
+    "react-codemirror": "au9dha9s8dasd",
     "react-copy-to-clipboard": "^4.2.1",
     "react-datetime": "git+https://github.com/AaronAsAChimp/react-datetime#181-typings-fix",
     "react-dom": "^15.2.1",
