--- a/package.json
+++ b/package.json
@@ -113,6 +113,7 @@
     "react-resizable": "^1.6.0",
     "react-router": "^2.6.0",
     "react-router-relay": "^0.13.4",
+    "react-svg-chart": "^4.0.0",
     "react-tagsinput": "^3.12.0",
     "react-tether": "^0.5.2",
     "react-toggle-button": "^2.1.0",
