--- a/package.json
+++ b/package.json
@@ -109,7 +109,7 @@
     "react-modal": "^1.6.5",
     "react-notification-system": "^0.2.7",
     "react-redux": "5.0.3",
-    "react-relay": "^0.9.3",
+    "react-relay": "0.10.0",
     "react-resizable": "^1.6.0",
     "react-router": "^2.6.0",
     "react-router-relay": "^0.13.4",
