--- a/circle.yml
+++ b/circle.yml
@@ -27,7 +27,7 @@ deployment:
             SUBSCRIPTIONS_EU_WEST_1: wss://subscriptions.graph.cool
             SUBSCRIPTIONS_US_WEST_2: wss://subscriptions.us-west-2.graph.cool
             SUBSCRIPTIONS_AP_NORTHEAST_1: wss://subscriptions.ap-northeast-1.graph.cool
-            CLI_AUTH_TOKEN_ENDPOINT: https://cli-auth-api.graph.cool
+            CLI_AUTH_TOKEN_ENDPOINT: https://cli-auth-api.graph.cool/prod
 
   dev:
     branch: dev
@@ -41,7 +41,7 @@ deployment:
             SUBSCRIPTIONS_EU_WEST_1: wss://dev.subscriptions.graph.cool
             SUBSCRIPTIONS_US_WEST_2: wss://dev.subscriptions.us-west-2.graph.cool
             SUBSCRIPTIONS_AP_NORTHEAST_1: wss://dev.subscriptions.ap-northeast-1.graph.cool
-            CLI_AUTH_TOKEN_ENDPOINT: https://cli-auth-api.graph.cool
+            CLI_AUTH_TOKEN_ENDPOINT: https://cli-auth-api.graph.cool/dev
 
   default:
     branch: /^(?!(dev|master)$).*/
@@ -55,4 +55,4 @@ deployment:
             SUBSCRIPTIONS_EU_WEST_1: wss://dev.subscriptions.graph.cool
             SUBSCRIPTIONS_US_WEST_2: wss://dev.subscriptions.us-west-2.graph.cool
             SUBSCRIPTIONS_AP_NORTHEAST_1: wss://dev.subscriptions.ap-northeast-1.graph.cool
-            CLI_AUTH_TOKEN_ENDPOINT: https://cli-auth-api.graph.cool
+            CLI_AUTH_TOKEN_ENDPOINT: https://cli-auth-api.graph.cool/dev
