--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "private": true,
   "scripts": {
@@ -65,7 +66,7 @@
     "calculate-size": "^0.2.0",
     "cheerio": "^0.22.0",
     "classnames": "^2.2.5",
-    "codemirror": "asdasda",
+    "codemirror": "5.25.2",
     "codemirror-graphql": "^0.6.3",
     "cookiestore": "^1.1.0",
     "cuid": "^1.3.8",
@@ -98,7 +99,7 @@
     "react-addons-shallow-compare": "^15.3.1",
     "react-autocomplete": "^1.0.1",
     "react-click-outside": "git+https://github.com/tj/react-click-outside#master",
-    "react-codemirror": "au9dha9s8dasd",
+    "react-codemirror": "0.3.0",
     "react-copy-to-clipboard": "^4.2.1",
     "react-datetime": "git+https://github.com/AaronAsAChimp/react-datetime#181-typings-fix",
     "react-dom": "^15.2.1",
@@ -177,6 +178,7 @@
     "typescript": "2.1.5",
     "url-loader": "^0.5.7",
     "webpack": "2.3.1",
-    "webpack-dev-server": "2.3.1"
+    "webpack-dev-server": "2.4.5"
   }
 }
+
