--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "cuid": "^1.3.8",
     "downloadjs": "^1.4.7",
     "drumstick": "^1.0.8",
+    "faker": "^4.1.0",
     "file-saver": "^1.3.3",
     "graphcool-graphiql": "1.7.6",
     "graphcool-metrics": "0.2.3",
