--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
     "target": "es2015",
     "outDir": "lib",
     "moduleResolution": "node",
-    "allowJs": true
+    "allowJs": true,
+    "lib": ["ES2017", "DOM"]
   },
   "exclude": [
     "node_modules",
