--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "graphcool-metrics": "0.2.3",
     "graphcool-styles": "0.1.22",
     "graphiql": "^0.8.0",
+    "graphql": "github:apis-guru/graphql-js#directives-fork-dist",
     "graphql-voyager": "git+https://github.com/timsuchanek/graphql-voyager#build3",
     "immutable": "^3.8.1",
     "isomorphic-fetch": "^2.2.1",
