--- a/package.json
+++ b/package.json
@@ -123,6 +123,7 @@
     "react-tether": "^0.5.2",
     "react-toggle-button": "^2.1.0",
     "react-tooltip": "^3.1.1",
+    "react-transition-group": "^1.1.3",
     "react-twitter-widgets": "^0.2.4",
     "react-virtualized": "8.11.4",
     "react-youtube": "^7.3.0",
