--- a/package.json
+++ b/package.json
@@ -162,6 +162,7 @@
     "enzyme-to-json": "^1.1.4",
     "extract-text-webpack-plugin": "^2.0.0-beta.3",
     "file-loader": "^0.9.0",
+    "fork-ts-checker-webpack-plugin": "^0.1.5",
     "html-webpack-plugin": "^2.22.0",
     "identity-obj-proxy": "^3.0.0",
     "jest-cli": "^16.0.1",
@@ -178,7 +179,7 @@
     "sass-loader": "^4.0.0",
     "style-loader": "^0.13.1",
     "svgo-loader": "^1.1.0",
-    "tslint": "^4.0.1",
+    "tslint": "5.3.2",
     "tslint-config-standard": "^2.0.0",
     "tslint-loader": "^3.0.0",
     "typescript": "2.1.5",
