--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "npm run lint && jest",
     "test-quick": "jest",
     "test-watch": "jest --watch",
-    "dll": "webpack --config dll.webpack.config.js"
+    "dll": "webpack --config dll.webpack.config.js",
+    "analyze": "source-map-explorer dist/app.*"
   },
   "pre-push": [
     "test-quick"
@@ -167,6 +168,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest-cli": "^16.0.1",
     "json-loader": "^0.5.4",
+    "lodash-webpack-plugin": "^0.11.4",
     "netlify-cli": "^1.0.3",
     "nock": "^8.1.0",
     "node-noop": "^1.0.0",
@@ -177,6 +179,7 @@
     "react-test-renderer": "^15.3.2",
     "redux-mock-store": "^1.2.1",
     "sass-loader": "^4.0.0",
+    "source-map-explorer": "^1.3.3",
     "style-loader": "^0.13.1",
     "svgo-loader": "^1.1.0",
     "tslint": "5.3.2",
