--- a/package.json
+++ b/package.json
@@ -2,12 +2,16 @@
   "private": true,
   "scripts": {
     "build": "rm -rf dist && NODE_ENV=production GRAPHQL_ENDPOINT=$BACKEND_ADDR/system webpack --config webpack.config.build.js -p && cp -r static/* dist",
-    "deploy": "npm run dll && npm run build && cp dll/vendor.bundle.js dist/vendor.bundle.js && cp dist/index.html dist/200.html && netlify deploy -p dist -s $NETLIFY_ID -t $NETLIFY_TOKEN",
+    "pre-deploy": "npm run dll && npm run build && cp dll/vendor.bundle.js dist/vendor.bundle.js && cp dist/index.html dist/200.html ",
+    "deploy-production": "netlify deploy -p dist -s $NETLIFY_ID -t $NETLIFY_TOKEN",
+    "deploy-integration": "netlify deploy -p dist -s $INTEGRATION_NETLIFY_ID -t $INTEGRATION_NETLIFY_TOKEN",
+    "deploy": "npm run pre-deploy && npm run deploy-integration && npm run test-integration && npm run deploy-production",
     "lint": "tslint \"src/**/*.ts{,x}\"",
     "start": "GRAPHQL_ENDPOINT=$BACKEND_ADDR/system webpack-dev-server --hot --profile --history-api-fallback --host 0.0.0.0 --port 4000 --content-base dll/",
     "test": "npm run lint && jest",
     "test-quick": "jest",
     "test-watch": "jest --watch",
+    "test-integration": "cd integration-tests; tsc; ava dist/test.js",
     "dll": "webpack --config dll.webpack.config.js",
     "analyze": "source-map-explorer dist/app.*"
   },
@@ -60,11 +64,13 @@
     "@types/redux-thunk": "2.1.32",
     "@types/whatwg-fetch": "^0.0.32",
     "auth0-lock": "^10.5.0",
+    "ava": "^0.19.1",
     "babel-plugin-transform-async-to-generator": "^6.8.0",
     "babel-preset-stage-3": "^6.22.0",
     "bluebird": "^3.4.6",
     "calculate-size": "^0.2.0",
     "cheerio": "^0.22.0",
+    "chromeless": "^0.1.4",
     "classnames": "^2.2.5",
     "codemirror": "5.25.2",
     "codemirror-graphql": "^0.6.3",
