--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "happypack": "^3.1.0",
     "immutable": "^3.8.1",
     "isomorphic-fetch": "^2.2.1",
+    "jwt-decode": "^2.2.0",
     "lodash": "^4.17.2",
     "lokka": "^1.7.0",
     "lokka-transport-http": "^1.4.0",
