--- a/package.json
+++ b/package.json
@@ -80,7 +80,7 @@
     "drumstick": "^1.0.8",
     "faker": "^4.1.0",
     "file-saver": "^1.3.3",
-    "graphcool-graphiql": "1.8.2",
+    "graphcool-graphiql": "^1.8.3",
     "graphcool-metrics": "0.2.5",
     "graphcool-styles": "0.1.23",
     "graphiql": "^0.8.0",
